--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
-    "typescript": "5.3.3",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
